# rn-mobile-boilerplate

./: .env.dev  .gitignore  README.md  compose.yml
.github/workflows/: examplebranch-examplecontainer-deploy.yml
local/: .gitignore
local/auth/: .gitignore  config-ssl.json
local/db/: .gitignore
local/db/data/: .gitignore
src/backend/: Dockerfile  pyproject.toml
src/backend/src/: main.py
src/backend/src/auth/: __init__.py  dev.py  user.py
src/backend/src/database/: __init__.py  mongo.py
src/mobile/: app.json  package-lock.json  package.json
src/mobile/app/: _layout.tsx  index.tsx
src/mobile/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
src/mobile/components/: BaseView.tsx
src/mobile/components/custom/: FruitForm.tsx  LoginButton.tsx
src/mobile/components/ui/button/: index.tsx
src/mobile/constants/: StorageKeys.ts
src/mobile/state/: index.ts  reducer.ts
src/mobile/state/api/: api.ts  index.ts
src/scripts/: cicd.sh  deploy-template.yml  init.sh
