[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Will Halfpenny",email = "30996474+will-0@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = {extras = ["standard"], version = ">=0.115.12,<0.116.0"}
uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
motor = "^3.7.0"
debugpy = "^1.8.13"
pyjwt = "^2.10.1"
cryptography = "^44.0.2"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
